cmake_minimum_required(VERSION 3.17)
project(parserandcompiler)

set(CMAKE_CXX_STANDARD 20)

add_executable(parserandcompiler main.cpp)

add_subdirectory(simpleparser)
target_link_libraries(parserandcompiler simpleparser_internals)

add_subdirectory(bytecodeinterpreter)
target_link_libraries(parserandcompiler bytecodeinterpreter_internals)